Adding individual transactions adds to db, and initial transactions page load queries db for transactions to display

--- a/assets/css/transactions.css
+++ b/assets/css/transactions.css
@@ -38,8 +38,9 @@ body {
 	width:23%; 
 	display:inline;
 }
-#addDiv form a {
-	margin-top:3.5em;
+
+#addButton {
+	margin-top:3.5em !important;
 }
 
 #tableDiv {
