--- a/assets/css/transactions.css
+++ b/assets/css/transactions.css
@@ -45,4 +45,24 @@ body {
 
 #tableDiv {
 	margin:0px 5px;
+	z-index:0;
+}
+
+#overlay {
+	display:none;
+	position:fixed;
+	width:100%;
+	height:100%;
+	top:0;
+	left:0;
+	opacity:0.6; 
+	background-color:black; 
+	z-index: 1;
+}
+
+#progress {
+	display:block; 
+	margin-top: 17%; 
+	margin-left:auto; 
+	margin-right:auto;
 }
